# ZenLib

./: .gitignore  CMakeLists.txt  setup.py
python/: CMakeLists.txt  test.py
python/src/: main.cpp
